[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro.pezzato@gmail.com>"]
edition = "2018"

[lib]
name = "the_master_of_cryptocurrencies"
path = "src/lib.rs"

[[bin]]
name = "the_master_of_cryptocurrencies"
path = "src/bin/main.rs"

[dependencies]
rayon = "1.2.0"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "my_benchmark"
harness = false